--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.3.2"
+browser = "1.8.0"
 gson = "2.10.1"
 kotlin = "1.9.0"
 coreKtx = "1.13.0"
@@ -13,9 +14,12 @@ navigationFragmentKtx = "2.7.7"
 navigationUiKtx = "2.7.7"
 spotifyAuth = "2.0.0"
 spotifyRemote = "2.0.0"
+webkit = "1.10.0"
 
 [libraries]
+androidx-browser = { module = "androidx.browser:browser", version.ref = "browser" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-webkit = { module = "androidx.webkit:webkit", version.ref = "webkit" }
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
@@ -25,10 +29,8 @@ material = { group = "com.google.android.material", name = "material", version.r
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigationFragmentKtx" }
 androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigationUiKtx" }
-#spotify-app-remote-release = { group = "com.spotify.android", name = "app-remote", version.ref = "spotifyAppRemote" }
 spotify-auth = { group = "com.spotify.android", name = "auth", version.ref = "spotifyAuth" }
 spotify-remote = { group = "com.spotify.android", name = "remote", version.ref = "spotifyRemote" }
-spotify-app-remote-release = { group = "spotify.app.remote.release", name = "C:\\Users\\Groobles\\AndroidStudioProjects\\NewbornNapTracker\\app\\libs\\spotify-app-remote-release-0.8.0.aar"}
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
