--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.newbornnaptracker">
-
     <!-- Spotify -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -18,6 +17,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.NewbornNapTracker"
         tools:targetApi="31">
+        <activity
+            android:name=".MusicPlayerActivity"
+            android:exported="false"
+            android:label="@string/title_activity_music_player"
+            android:theme="@style/Theme.NewbornNapTracker" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
