--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.NewbornNapTracker"
         tools:targetApi="31">
-
         <activity
             android:name=".MusicPlayerActivity"
             android:exported="false"
@@ -29,16 +28,14 @@
             android:theme="@style/Theme.NewbornNapTracker">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!-- Declare the MusicService here -->
+        </activity> <!-- Declare the MusicService here -->
         <service
             android:name=".MusicService"
             android:exported="false"
-            android:foregroundServiceType="mediaPlayback"/>
-
+            android:foregroundServiceType="mediaPlayback" />
     </application>
 
 </manifest>
